Refine howto